# seshat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
api/: __init__.py  app.py
database/: __init__.py  models.py  repository.py
forensics/: __init__.py  evidence.py  integrity.py
importers/: __init__.py  csv_importer.py  document_importer.py  email_importer.py  json_importer.py
monitor/: __init__.py  alerts.py  drift_detector.py  scheduler.py  watcher.py
privacy/: __init__.py  anonymizer.py  audit.py  redactor.py
reports/: __init__.py  html_report.py  pdf_report.py
scraper/: __init__.py  base.py  proxy.py  rate_limiter.py  reddit.py  twitter.py  web.py
seshat/: __init__.py  analyzer.py  comparator.py  profile.py  utils.py
seshat/advanced/: __init__.py  adversarial.py  ai_detection.py  cross_platform.py  demographics.py  multi_author.py  nli.py  temporal.py
seshat/features/: __init__.py  emoji.py  formatting.py  function_words.py  idiolect.py  lexical.py  ngrams.py  punctuation.py  social_media.py  syntactic.py
seshat/io/: __init__.py  exporters.py  readers.py
seshat/ml/: __init__.py  classifier.py  embeddings.py  ensemble.py
seshat/psychology/: __init__.py  cognitive.py  emotional.py  mental_health.py  pd_advanced_metrics.py  pd_calibration.py  pd_classifier.py  pd_dictionaries.py  pd_linguistic.py  pd_semantic.py  pd_temporal.py  pd_validation.py  personality.py  personality_disorders.py  social.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/unit/: __init__.py  test_analyzer.py  test_comparator.py  test_features.py  test_personality_disorders.py  test_profile.py  test_psychology.py  test_utils.py
web/: __init__.py  app.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: ai_detection.html  ai_detection_results.html  analyze.html  analyze_results.html  base.html  compare.html  compare_results.html  error.html  index.html  psychological.html  psychological_results.html
