[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seshat"
version = "0.1.0"
description = "Stylometric Authorship Attribution & Psychological Profiling Tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Seshat Contributors"}
]
keywords = [
    "stylometry",
    "authorship-attribution",
    "forensic-linguistics",
    "psychological-profiling",
    "nlp",
    "text-analysis"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # Core
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",

    # NLP
    "nltk>=3.8.0",
    "spacy>=3.7.0",
    "textstat>=0.7.0",
    "langdetect>=1.0.9",

    # ML
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "imbalanced-learn>=0.11.0",

    # Emoji
    "emoji>=2.8.0",

    # API
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",

    # Web Interface
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",

    # Visualization
    "plotly>=5.15.0",
    "kaleido>=0.2.1",

    # Report Generation
    "weasyprint>=60.0",
    "markdown>=3.5.0",

    # Web Scraping
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "httpx>=0.25.0",
    "praw>=7.7.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",

    # Document Processing
    "python-docx>=1.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",

    # Email
    "imapclient>=2.3.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Screenshots
    "pillow>=10.0.0",

    # Hashing & Security
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
deep-learning = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
]
distributed = [
    "celery>=5.3.0",
    "redis>=5.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[project.scripts]
seshat = "cli:main"

[project.urls]
Homepage = "https://github.com/seshat-project/seshat"
Documentation = "https://seshat-project.github.io/seshat"
Repository = "https://github.com/seshat-project/seshat"
Issues = "https://github.com/seshat-project/seshat/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["seshat*", "api*", "web*", "batch*", "reports*", "scraper*", "importers*", "database*", "monitor*", "forensics*", "privacy*", "collaboration*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=seshat --cov-report=term-missing"
